# Cellular-automaton

./: .gitignore  README.md  main.py  pyproject.toml
src/cautom/: cli.py
