[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cautom"
version = "0.1.1"
description = "Terminal Game of Life simulator"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Shiyuan Chen" }]
dependencies = ["rich>=13.0.0"]

[project.scripts]
cautom = "cautom.cli:main"
